[workspace]
members = [
    "arbutil",
    "bench",
    "brotli",
    "caller-env",
    "jit",
    "prover",
    "stylus",
]
exclude = [
    "langs",
    "stylus/tests",
    "tools",
    "wasm-libraries",
    "wasm-testsuite",
]
resolver = "2"

[workspace.package]
authors = ["Offchain Labs"]
edition = "2021"
homepage = "https://arbitrum.io"
license = "BSL"
publish = false
repository = "https://github.com/OffchainLabs/nitro.git"
rust-version = "1.88"

[workspace.dependencies]
bincode = { version = "1.3.3" }
bitvec = { version = "1.0.0" }
c-kzg = { version = "2.1.1" } # TODO: look into switching to rust-kzg (no crates.io release or hosted rustdoc yet)
clap = { version = "4.4.8" }
clru = { version = "0.6.2" }
criterion = { version = "0.5.0" }
derivative = { version = "2.2.0" }
digest = { version = "0.10.7" }
enum-iterator = { version = "2.0.1" }
eyre = { version = "0.6.5" }
fnv = { version = "1.0.7" }
gperftools = { version = "0.2.0" }
hex = { version = "0.4.3" }
lazy_static = { version = "1.4.0" }
libc = { version = "0.2.132" }
lru = { version = "0.12.3" }
nom = { version = "7.0.0" }
num = { version = "0.4" }
num-bigint = { version = "0.4.4" }
num-derive = { version = "0.4.1" }
num_enum = { version = "0.7.2", default-features = false }
num-traits = { version = "0.2.17" }
once_cell = { version = "1.19.0" }
parking_lot = { version = "0.12.1" }
rand = { version = "0.8.4", default-features = false }
rand_pcg = { version = "0.3.1", default-features = false }
rayon = { version = "1.5.1" }
ruint2 = { version = "1.9.0" }
rustc-demangle = { version = "0.1.21" }
serde = { version = "1.0.130" }
serde_json = { version = "1.0.67" }
serde_with = { version = "3.8.1" }
sha2 = { version = "0.10.9" }
sha3 = { version = "0.10.8" }
siphasher = { version = "0.3.10" }
smallvec = { version = "1.10.0" }
static_assertions = { version = "1.1.0" }
structopt = { version = "0.3.26" }
thiserror = { version = "1.0.33" }
tiny-keccak = { version = "2.0.2" }
wasmparser = { version = "0.121" }
wat = { version = "1.0.56" }

arbutil = { path = "arbutil" }
brotli = { path = "brotli" }
caller-env = { path = "caller-env" }
prover = { path = "prover", default-features = false }
stylus = { path = "stylus", default-features = false }
user-host-trait = { path = "wasm-libraries/user-host-trait" }
wasmer = { path = "tools/wasmer/lib/api" }
wasmer-compiler-cranelift = { path = "tools/wasmer/lib/compiler-cranelift" }
wasmer-compiler-llvm = { path = "tools/wasmer/lib/compiler-llvm" }
wasmer-compiler-singlepass = { path = "tools/wasmer/lib/compiler-singlepass", default-features = false }
wasmer-types = { path = "tools/wasmer/lib/types" }
wasmer-vm = { path = "tools/wasmer/lib/vm" }

[profile.release]
debug = true
