load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "assertions",
    srcs = [
        "poster.go",
        "scanner.go",
    ],
    importpath = "github.com/OffchainLabs/bold/assertions",
    visibility = ["//visibility:public"],
    deps = [
        "//chain-abstraction:protocol",
        "//chain-abstraction/sol-implementation",
        "//challenge-manager/types",
        "//containers",
        "//layer2-state-provider",
        "//runtime",
        "//solgen/go/rollupgen",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_ethereum_go_ethereum//log",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "assertions_test",
    srcs = [
        "poster_test.go",
        "scanner_test.go",
    ],
    embed = [":assertions"],
    deps = [
        "//chain-abstraction:protocol",
        "//challenge-manager",
        "//challenge-manager/types",
        "//containers/option",
        "//layer2-state-provider",
        "//solgen/go/rollupgen",
        "//testing/mocks",
        "//testing/setup:setup_lib",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_stretchr_testify//require",
    ],
)
