load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "assertions",
    srcs = [
        "confirmation.go",
        "manager.go",
        "poster.go",
        "sync.go",
    ],
    importpath = "github.com/OffchainLabs/bold/assertions",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//api/db",
        "//chain-abstraction:protocol",
        "//chain-abstraction/sol-implementation",
        "//challenge-manager/types",
        "//containers",
        "//containers/option",
        "//containers/threadsafe",
        "//layer2-state-provider",
        "//runtime",
        "//solgen/go/rollupgen",
        "//util",
        "//util/stopwaiter",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//log",
        "@com_github_ethereum_go_ethereum//metrics",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "assertions_test",
    srcs = [
        "manager_test.go",
        "poster_test.go",
        "sync_test.go",
    ],
    embed = [":assertions"],
    deps = [
        "//chain-abstraction:protocol",
        "//challenge-manager",
        "//challenge-manager/types",
        "//containers/threadsafe",
        "//solgen/go/bridgegen",
        "//solgen/go/mocksgen",
        "//solgen/go/rollupgen",
        "//testing",
        "//testing/mocks/state-provider",
        "//testing/setup:setup_lib",
        "//util",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_stretchr_testify//require",
    ],
)
