module(
    name = "bold",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "protobuf", version = "28.2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.2")
go_sdk.nogo(nogo = "//:nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module_override(
    patch_strip = 1,
    patches = [
        "//third_party:com_github_ethereum_go_ethereum_secp256k1.patch",
    ],
    path = "github.com/ethereum/go-ethereum",
)

# TODO: Remove when https://github.com/bazelbuild/rules_go/issues/4084 is resolved
go_deps.module(
    path = "golang.org/x/tools",
    # curl https://sum.golang.org/lookup/golang.org/x/tools@v0.24.0
    sum = "h1:J1shsA93PJUEVaUSaay7UXAyE8aimq3GW0pjlolpa24=",
    version = "v0.24.0",
)
use_repo(
    go_deps,
    "com_github_ccoveille_go_safecast",
    "com_github_ethereum_go_ethereum",
    "com_github_gorilla_mux",
    "com_github_jmoiron_sqlx",
    "com_github_mattn_go_sqlite3",
    "com_github_pkg_errors",
    "com_github_stretchr_testify",
    "org_golang_x_sync",
    "org_golang_x_tools",
)
