load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "challenge-manager",
    srcs = [
        "challenges.go",
        "edge_sync.go",
        "edge_tracker.go",
        "edge_tracker_states.go",
        "edge_tracker_transition_table.go",
        "manager.go",
    ],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/challenge-manager",
    visibility = ["//visibility:public"],
    deps = [
        "//chain-abstraction:protocol",
        "//challenge-manager/chain-watcher",
        "//challenge-manager/challenge-tree",
        "//containers",
        "//containers/fsm",
        "//containers/threadsafe",
        "//layer2-state-provider",
        "//math",
        "//runtime",
        "//solgen/go/challengeV2gen",
        "//solgen/go/rollupgen",
        "//state-commitments/history",
        "//time",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "challenge-manager_test",
    srcs = [
        "edge_sync_test.go",
        "edge_tracker_test.go",
        "manager_test.go",
    ],
    embed = [":challenge-manager"],
    deps = [
        "//chain-abstraction:protocol",
        "//challenge-manager/chain-watcher",
        "//testing/logging",
        "//testing/mocks",
        "//testing/setup:setup_lib",
        "//time",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_stretchr_testify//require",
    ],
)
