load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "challenge-manager",
    srcs = [
        "challenges.go",
        "manager.go",
    ],
    importpath = "github.com/OffchainLabs/bold/challenge-manager",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//assertions",
        "//chain-abstraction:protocol",
        "//challenge-manager/chain-watcher",
        "//challenge-manager/edge-tracker",
        "//challenge-manager/types",
        "//containers",
        "//containers/option",
        "//containers/threadsafe",
        "//layer2-state-provider",
        "//runtime",
        "//solgen/go/challengeV2gen",
        "//solgen/go/rollupgen",
        "//time",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//log",
        "@com_github_ethereum_go_ethereum//rpc",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "challenge-manager_test",
    srcs = ["manager_test.go"],
    embed = [":challenge-manager"],
    deps = [
        "//chain-abstraction:protocol",
        "//challenge-manager/chain-watcher",
        "//challenge-manager/edge-tracker",
        "//challenge-manager/types",
        "//containers/option",
        "//layer2-state-provider",
        "//solgen/go/challengeV2gen",
        "//solgen/go/rollupgen",
        "//testing/mocks",
        "//testing/setup:setup_lib",
        "//time",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//rpc",
        "@com_github_stretchr_testify//require",
    ],
)
