load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "execution",
    srcs = ["engine.go"],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/execution",
    testonly = True,
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
    ],
)

go_test(
    name = "execution_test",
    srcs = ["engine_test.go"],
    embed = [":execution"],
    deps = [
        "//util",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_stretchr_testify//require",
    ],
)
