load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "execution",
    srcs = ["engine.go"],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/execution",
    visibility = ["//visibility:public"],
    deps = [
        "//protocol",
        "@com_github_ethereum_go_ethereum//common",
    ],
)

go_test(
    name = "execution_test",
    srcs = ["engine_test.go"],
    embed = [":execution"],
    deps = [
        "//protocol",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_stretchr_testify//require",
    ],
)
