load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "layer2-state-provider",
    srcs = [
        "history_commitment_provider.go",
        "provider.go",
    ],
    importpath = "github.com/OffchainLabs/bold/layer2-state-provider",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//api/db",
        "//chain-abstraction:protocol",
        "//containers/in-progress-cache",
        "//containers/option",
        "//state-commitments/history",
        "//state-commitments/prefix-proofs",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//metrics",
    ],
)

go_test(
    name = "layer2-state-provider_test",
    srcs = ["history_commitment_provider_test.go"],
    embed = [":layer2-state-provider"],
    deps = [
        "//containers/option",
        "@com_github_stretchr_testify//require",
    ],
)
