load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "math",
    srcs = ["math.go"],
    importpath = "github.com/OffchainLabs/bold/math",
    visibility = ["//visibility:public"],
)

go_test(
    name = "math_test",
    srcs = ["math_test.go"],
    embed = [":math"],
    deps = ["@com_github_stretchr_testify//require"],
)
