load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "math",
    srcs = [
        "intlog2.go",
        "math.go",
    ],
    importpath = "github.com/offchainlabs/bold/math",
    visibility = ["//visibility:public"],
)

go_test(
    name = "math_test",
    size = "small",
    srcs = [
        "intlog2_test.go",
        "math_test.go",
    ],
    embed = [":math"],
    deps = [
        "//testing/casttest",
        "@com_github_stretchr_testify//require",
    ],
)
