load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protocol",
    srcs = [
        "assertions.go",
        "event_feed.go",
        "events.go",
        "inbox.go",
        "visualization.go",
    ],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/protocol",
    visibility = ["//visibility:public"],
    deps = [
        "//util",
        "@com_github_emicklei_dot//:dot",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//common/hexutil",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_ethereum_go_ethereum//params",
        "@com_github_pkg_errors//:errors",
        "@com_github_prysmaticlabs_prysm_v3//container/trie:go_default_library",
    ],
)

go_test(
    name = "protocol_test",
    srcs = [
        "assertions_test.go",
        "inbox_test.go",
    ],
    embed = [":protocol"],
    deps = [
        "//util",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_stretchr_testify//require",
    ],
)
