load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protocol",
    srcs = ["interfaces.go"],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/protocol",
    visibility = ["//visibility:public"],
    deps = [
        "//util",
        "@com_github_ethereum_go_ethereum//common",
    ],
)
