load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protocol",
    srcs = [
        "execution_state.go",
        "spec_interfaces.go",
    ],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/protocol",
    visibility = ["//visibility:public"],
    deps = [
        "//solgen/go/challengegen",
        "//solgen/go/rollupgen",
        "//util/commitments",
        "//util/option",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
    ],
)
