load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runtime",
    srcs = ["retry.go"],
    importpath = "github.com/OffchainLabs/challenge-protocol-v2/runtime",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:logrus"],
)

go_test(
    name = "runtime_test",
    srcs = ["retry_test.go"],
    embed = [":runtime"],
    deps = ["@com_github_stretchr_testify//require"],
)
